--- a/cmake/JanssonConfig.cmake.in
+++ b/cmake/JanssonConfig.cmake.in
@@ -1,7 +1,7 @@
-# - Config file for the Libevent package
+# - Config file for the jansson package
 # It defines the following variables
-#  LIBEVENT_INCLUDE_DIRS - include directories for FooBar
-#  LIBEVENT_LIBRARIES    - libraries to link against
+#  JANSSON_INCLUDE_DIRS - include directories for FooBar
+#  JANSSON_LIBRARIES    - libraries to link against
 
 # Get the path of the current file.
 get_filename_component(JANSSON_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
@@ -12,6 +12,6 @@ set(JANSSON_INCLUDE_DIRS "@JANSSON__INCLUDE_DIRS@")
 # Include the project Targets file, this contains definitions for IMPORTED targets.
 include(${JANSSON_CMAKE_DIR}/JanssonTargets.cmake)
 
-# IMPORTED targets from LibeventTargets.cmake
-set(JANSSON_LIBRARIES event event_core event_extras)
+# IMPORTED targets from JanssonTargets.cmake
+set(JANSSON_LIBRARIES jansson)
 
