--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,7 @@ if (MSVC)
    # Turn off Microsofts "security" warnings.
    add_definitions( "/W3 /D_CRT_SECURE_NO_WARNINGS /wd4005 /wd4996 /nologo" )
    
-   if (STATIC_CRT)
+   if (JANSSON_STATIC_CRT)
       set(CMAKE_C_FLAGS_RELEASE "/MT")
       set(CMAKE_C_FLAGS_DEBUG "/MTd")
    endif()
