--- a/test/.gitignore
+++ b/test/.gitignore
@@ -7,14 +7,15 @@ suites/api/test_dump
 suites/api/test_dump_callback
 suites/api/test_equal
 suites/api/test_load
+suites/api/test_load_callback
 suites/api/test_loadb
 suites/api/test_memory_funcs
 suites/api/test_number
 suites/api/test_object
 suites/api/test_pack
 suites/api/test_simple
+suites/api/test_sprintf
 suites/api/test_unpack
-suites/api/test_load_callback
 run-suites.log
 run-suites.trs
 test-suite.log
