More test coverage.
* Add test_load_callback to CMakeList.txt
* Add json_dump, json_load and json_unpack chaos testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -493,6 +493,7 @@ if (NOT JANSSON_WITHOUT_TESTS)
          test_equal
          test_load
          test_loadb
+         test_load_callback
          test_number
          test_object
          test_pack
