Add runtime version checking functions
This patch adds two new exported functions:

* `jansson_version_str` - Returns a human-readable version number
* `jansson_version_cmp` - Returns an integer less than, equal to, or greater
  than zero if the runtime version of Jansson is found, respectively, to be
  less than, to match, or be greater than the provided major, minor, and micro.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -17,6 +17,7 @@ suites/api/test_pack
 suites/api/test_simple
 suites/api/test_sprintf
 suites/api/test_unpack
+suites/api/test_version
 run-suites.log
 run-suites.trs
 test-suite.log
