--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,4 +26,5 @@ libjansson_la_LDFLAGS = \
 	-no-undefined \
 	-export-symbols-regex '^json_|^jansson_' \
 	-version-info 17:0:13 \
+	@JSON_SYMVER_LDFLAGS@ \
 	@JSON_BSYMBOLIC_LDFLAGS@
